# GPT_mtl_encode_sdk

./: .gitignore  1  CMakeLists.txt  MTL_SDK_description.md  README.md  connection_state.json  nmos-mini.html  编码SDK.md  需求.md
docs/: COMPLIANCE.md  DPDK_MTL_SETUP.md  EASY_NMOS_IMPLEMENTATION.md  EASY_NMOS_QUICK_START.md  IS05_SERVER_IMPLEMENTATION.md  NMOS_JS_DEPLOY.md  NMOS节点图界面实现指南.md  README.md  RECEIVER_CONNECT_TROUBLESHOOTING.md  ROUTING.md  ROUTING_REQUIREMENTS_COMPLIANCE.md  SDK_USAGE.md  ST2110_TESTING.md  TESTING.md  双机路由管理配置-本机发送第二台接收.md  双机路由管理配置-本机接收第二台发送.md  解耦通信机制梳理与sample重构.md  路由管理配置-Easy-NMOS独立部署.md  需求16-18_具体实现拆解与routing现状.md  需求1_视频流收发部署与使用.md  需求2_编码SDK部署与使用.md  需求3_路由管理部署与使用.md
docs/netplan/: 99-st2110-receiver-enp6s0.yaml  99-st2110-sender-enp4s0.yaml  README.md
encode_sdk/include/encode_sdk/: encode_sdk.hpp
encode_sdk/src/: encode_sdk.cpp  ffmpeg_utils.cpp  ffmpeg_utils.hpp
frame_store/src/: ring_slice_store.cpp
frame_transport/include/frame_transport/: frame_transport.hpp
modules/frame_store/include/frame_store/: ring_slice_store.hpp  yuv_file_writer.hpp
modules/frame_store/src/: yuv_file_writer.cpp
mtl_sdk/include/mtl_sdk/: mtl_sdk.hpp
mtl_sdk/src/: mtl_backend.hpp  mtl_backend_mock.cpp  mtl_backend_mtl.cpp  mtl_sdk.cpp  ring_spsc.hpp  sdp.cpp
routing/: README.md  docker-compose.yml
routing/is05_server/: README.md  app.py  app2.py  app3.py  app4.py
routing/scripts/: register_node_example.py  run_routing_node.sh  run_with_nmos.sh
samples/: av_txrx_demo.cpp  is05_receiver_daemon.cpp  is05_receiver_only_daemon.cpp  slice_decode.cpp  st2110_receive.cpp  st2110_receive_store.cpp  st2110_record.cpp  st2110_send.cpp  yuv_encode.cpp
scripts/: setup_enp6s0_receiver.sh
tests/: CMakeLists.txt  README.md
tests/integration/: ptp_behavior_test.cpp
tests/scripts/: nmos_registration_test.sh  run_all_tests.sh  st2110_roundtrip_test.sh
tests/unit/: encode_format_test.cpp  encode_reconfigure_test.cpp  sdp_test.cpp  sdp_to_session_test.cpp
ui-stage-d-min/: nmos-stage-d-min.html
video/receive/: recv_is05_run1.yuv.json  recv_is05_run2.yuv.json  recv_run1.yuv.json
